fix: specify Node.js versions 12 and 14

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -21,9 +21,9 @@ import { isWindows } from "react-device-detect";
 
 Before proceeding, make sure you have the following:
 
-#### Node.js > 12
+#### Node.js ^12 || ^14
 
-- any version equal or greater than **12**
+- Node.Js versions **12** or **14**
 - If you don't have Node.js installed, the easiest way to install it is by [downloading the official binary](https://nodejs.org/en/)
 
 #### yarn ^1.22.0 || ^2
@@ -110,6 +110,10 @@ SubscriptionRequiredException: The AWS Access Key Id needs a subscription for th
 
 This error can happen if an AWS account was just created. If that's the case, then there needs to pass some time until the account is fully activated on the AWS side. So, the only thing that can be done at this point is simply waiting and trying again later.
 
+#### Pulumi is throwing a `syscall.loadsystemlibrary` exception
+There could be various reasons why this error was thrown. But, if deploying from a Windows machine, we've seen that it could be
+caused by an anti-virus software that you might have installed on your machine. Our suggestion is to try to temporary disable it and see if that produces any positive outcome.
+
 #### Newer Apple M1 devices
 
 If you're using a next-generation Apple M1 device, there is a chance you might run into problems while deploying your new Webiny project. For example:
@@ -125,7 +129,3 @@ export GODEBUG=asyncpreemptoff=1
 ```
 
 Please try executing the command in your terminal, and run the deployment again. If this does not help, feel free to [ask](https://www.webiny.com/slack) for additional help.
-
-#### Pulumi is throwing a `syscall.loadsystemlibrary` exception
-There could be various reasons why this error was thrown. But, if deploying from a Windows machine, we've seen that it could be
-caused by an anti-virus software that you might have installed on your machine. Our suggestion is to try to temporary disable it and see if that produces any positive outcome.
