fix: add "is Node.js 15 supported" FAQ item

--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -23,7 +23,7 @@ Before proceeding, make sure you have the following:
 
 #### Node.js ^12 || ^14
 
-- Node.Js versions **12** or **14**
+- Node.js versions **12** or **14**
 - If you don't have Node.js installed, the easiest way to install it is by [downloading the official binary](https://nodejs.org/en/)
 
 #### yarn ^1.22.0 || ^2
@@ -93,6 +93,10 @@ If, at any point in time, you wish to disable this behaviour, you can do it with
 :::
 
 ## Troubleshooting
+
+#### Can I use Webiny with Node 15?
+
+Currently that's not possible. Please install either version 12 or 14 of Node.js.
 
 #### Deploying my project takes a long time to finish.
 
