fix: remove "stack" keyword

--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
@@ -394,7 +394,7 @@ yarn webiny ws run build --folder=packages/app-headless-cms
 
 ```shell title="redeploy your api"
 cd your-project-root
-yarn webiny stack deploy api --env=YOUR_ENVIRONMENT
+yarn webiny deploy api --env=YOUR_ENVIRONMENT
 ```
 ... and
 ```shell title="rerun admin app if you are running locally"
@@ -404,5 +404,5 @@ yarn start --env=YOUR_ENVIRONMENT
 ... or
 ```shell title="redeploy if you are running in the cloud"
 cd your-project-root
-yarn webiny stack deploy apps/admin --env=YOUR_ENVIRONMENT
+yarn webiny deploy apps/admin --env=YOUR_ENVIRONMENT
 ```
