doc: change section title

--- a/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.1.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.1.0.mdx
@@ -108,9 +108,9 @@ Once you have that in place, make sure to pass the value of `protectedEnvironmen
 For more information and code changes, you can check the relevant [pull-request](https://github.com/webiny/webiny-js/pull/1500).
 :::
 
-## Add Support for ~ in Imports
+## Update build configs
 
-If you're developing your custom packages, you'll soon run into ugly import paths like `../../../../../types`, etc. To mitigate this, make the following changes in your project:
+If you're developing your custom packages, you'll soon run into ugly import paths like `../../../../../types`, etc. To avoid this, make the following changes in your project:
 
 #### Update `.babel.node.js`
 
