fix: remove informal writing elements like emoji

--- a/docs/tutorials/page-builder/update-an-existing-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/update-an-existing-page-builder-element.mdx
@@ -252,7 +252,7 @@ However, using similar principle you can do whatever logic you need.
 
 ## Conclusion
 
-Congratulations!! 🎉🥳
+Congratulations!
 
 You have added predefined settings to an existing Page Builder element.
 Use a similar approach to customize other elements for the Page Builder app.
