fix: create function

--- a/docs/tutorials/page-builder/update-an-existing-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/update-an-existing-page-builder-element.mdx
@@ -190,6 +190,10 @@ It is a function that gets the default value as the argument and returns the dat
 Let's see the example below:
 
 ```ts {9-33} title="apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts"
+import { set } from "dot-prop-immutable";
+import { createInitialPerDeviceSettingValue } from "@webiny/app-page-builder/editor/plugins/elementSettings/elementSettingsUtils";
+import { DisplayMode } from "@webiny/app-page-builder/types";
+
 // Some code is removed for the sake of brevity.
 
 button({
@@ -199,11 +203,9 @@ button({
     "pb-editor-page-element-style-settings-width"
   ],
   create: defaultValue => {
-    const elementData = { ...defaultValue };
-
     // Set default value for the padding property
-    set(
-      elementData,
+    let elementData = set(
+      defaultValue,
       "data.settings.padding",
       createInitialPerDeviceSettingValue(
         { advanced: true, top: "12px", right: "16px", bottom: "12px", left: "16px" },
@@ -212,7 +214,7 @@ button({
     );
 
     // Set default value for the width property
-    set(
+    elementData = set(
       elementData,
       "data.settings.width",
       createInitialPerDeviceSettingValue({ value: "150px" }, DisplayMode.DESKTOP)
