doc: add section about page builder plugins

--- a/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.1.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.1.0.mdx
@@ -108,6 +108,29 @@ Once you have that in place, make sure to pass the value of `protectedEnvironmen
 For more information and code changes, you can check the relevant [pull-request](https://github.com/webiny/webiny-js/pull/1500).
 :::
 
+## Update Page Builder Plugins
+
+We've upgraded all element plugins to support customization via factory parameters. It now also allows you to create multiple variations of the same element, with different settings.
+
+One of the plugins was not a factory in the previous version of Webiny, and we need to change the usage of that particular plugin in your project. Simply open the file below, and add `()` to execute the `grid` plugin factory:
+
+```ts title="apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts" {8}
+// ... imports
+
+export default [
+  contentBackground,
+  blockEditing,
+  // Elements
+  document(),
+  grid(),
+  block(),
+  gridBlock,
+  cell(),
+  heading()
+  // ... existing plugins
+];
+```
+
 ## Update build configs
 
 If you're developing your custom packages, you'll soon run into ugly import paths like `../../../../../types`, etc. To avoid this, make the following changes in your project:
@@ -256,6 +279,7 @@ module.exports = ({ path }, presets = []) => {
 ```
 
 #### Update TS and Babel configs in existing packages (if any)
+
 In case you already have custom packages, you will also need to update their `tsconfig.build.json` and `tsconfig.json` files, by adding the following parameters to them:
 
 ```json
