fix: add a section on package upgrade

--- a/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.1.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-to-5.1.0.mdx
@@ -6,8 +6,6 @@ keywords: ["webiny", "version", "upgrade", "5.0.0", "5.1.0"]
 description: Learn how to upgrade Webiny from 5.0.0 to 5.1.0.
 ---
 
-import CenteredImage from "../../mdxComponents/centeredImage";
-
 :::tip What you’ll learn
 
 - how to upgrade Webiny from 5.0.0 to 5.1.0
@@ -18,6 +16,14 @@ import CenteredImage from "../../mdxComponents/centeredImage";
 
 Before continuing, make sure to take the necessary precautions, listed in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#-precaution-measures) section.
 :::
+
+## Upgrade Webiny Packages
+
+Execute the following command in the root of your project:
+
+```bash
+yarn up "@webiny/*@5.1.0"
+```
 
 ## Update Pulumi Infrastructure Code
 
@@ -306,3 +312,7 @@ module.exports = require("../../.babel.react")({ path: __dirname });
 ---
 
 Now you can use `~` to have nice, clean import paths in your packages, and Jest tests. `~` will always point to your packages' `src` folder.
+
+## Deploy your project
+
+Now you're ready to deploy your project. Run `yarn webiny deploy`, or consult the [guide on deployment](/docs/how-to-guides/deployment/deploy-your-project#the-deploy-command).
