wip: create state-management guide

--- a/docs/how-to-guides/ci-cd/cloud-infrastructure-state-files.mdx
+++ b/docs/how-to-guides/ci-cd/cloud-infrastructure-state-files.mdx
@@ -119,4 +119,13 @@ Note that, when talking about different shared long-lived environments, like `st
 
 In your project root, open your `.gitignore` file and simply remove `.pulumi` from the list of ignored files and folders. Commit the change and from that point on, you should be able to check in all of your `.pulumi` folders.
 
+#### What happens if multiple Pulumi deployments are triggered at the same time?
+
+No matter which Pulumi backend you end up choosing, if two or more Pulumi deployments are triggered simultaneously, only the first one will be performed. The rest will be rejected, with an appropriate error being returned in your terminal. The error should look similar to the following:
+
+```bash
+error: the current deployment has 1 resource(s) with pending operations:
+  * urn:pulumi:dev::website::aws:cloudfront/distribution:Distribution::delivery, interrupted while updating
+```
+
 <!-- #### Should I have my Pulumi.yaml files in git or n ot? -->
