wip: create state-management guide

--- a/docs/how-to-guides/ci-cd/cloud-infrastructure-state-files.mdx
+++ b/docs/how-to-guides/ci-cd/cloud-infrastructure-state-files.mdx
@@ -104,6 +104,22 @@ It is a service that not only gives you the ability to store your cloud infrastr
 
 Of course, it does come with a price, so make sure to check their official [pricing page](https://www.pulumi.com/pricing/) before making a decision on which backend you're about to use.
 
+## Using Different Backends
+
+As mentioned, by default, Webiny will instruct the Pulumi framework to use the [local file system](/docs/how-to-guides/ci-cd/cloud-infrastructure-state-files#local-file-system) as the backend. But, you can easily instruct it to use a different one, using the `PULUMI_LOGIN` environment variable. For example, if we wanted to use Amazon S3 or the mentioned Pulumi Service as our backend, we could set those like so:
+
+```bash
+# Use "my-s3-bucket" bucket.
+PULUMI_LOGIN=s3://my-s3-bucket/some-folder-maybe
+
+# Or, use Pulumi Service, by providing an API key:
+PULUMI_LOGIN=my_secret_api_key_xyz
+```
+
+:::info
+Environment variables can be assigned in a couple of ways. Check out the [Environment variables](#) guide to learn more.
+:::
+
 ## FAQ
 
 #### I switched to another machine. How can I continue working with the same cloud infrastructure I previously deployed?
