--- a/docs/how-to-guides/ci-cd/introduction.mdx
+++ b/docs/how-to-guides/ci-cd/introduction.mdx
@@ -18,12 +18,8 @@ The process of application development is much more than just writing code. It e
 - organizing VCS branches
 - deployment into multiple environments
 - application and cloud infrastructure security
-- [monitoring and observability](https://thenewstack.io/monitoring-vs-observability-whats-the-difference/)
+- monitoring and observability <!-- (https://thenewstack.io/monitoring-vs-observability-whats-the-difference/) -->
 - team organization
 - and more
 
-In this following sections, we cover some of these subprocesses and provide best practices around them.
-
-:::info
-To learn more about the CI/CD workflows in general, please take a look at the [CI/CD](/docs/key-topics/ci-cd) key topic.
-:::
+In this following sections, we cover some of these subprocesses and provide best practices around how to implement them.
