fix: rename tutorial file

--- a/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/customize-an-existing-page-builder-element.mdx
@@ -22,13 +22,13 @@ This feature is available since Webiny **v5.1.0**.
 
 ## Overview
 
-All Page Builder elements are plugins which means we can easily modify, override or even add new ones.
+All Page Builder elements are plugins which means we can modify, override or even add new ones.
 <!-- TODO: Add an info section about What are plugins? And how we use them in Webiny? -->
-Let's see how we can add two predefined settings which are `padding` and `width` to the `button` element.
+In this tutorial, you will learn how we can add two predefined settings which are `padding` and `width` to the `button` element.
 
 ## Plugin Type
 
-There's only one plugin you need to modify to customise an element: [`PbEditorPageElementPlugin`](/docs/references/page-builder/plugins#pb-editor-page-element).
+There's only one plugin you need to modify to customize an element: [`PbEditorPageElementPlugin`](/docs/references/page-builder/plugins#pb-editor-page-element).
 
 Plugins of this type require a `create` function (to create an element data structure), and a `render` function that returns a React element that gets rendered in the editor.
 
@@ -48,7 +48,7 @@ type PbEditorElementPluginArgs = {
 
 ## Add Settings in an Element
 
-Head over to `apps/admin/code/src/plugins/pageBuilder.ts` file where all the plugins related to the Page Builder app are located.
+Head over to the `apps/admin/code/src/plugins/pageBuilder.ts` file where all the plugins related to the Page Builder app are located.
 
 As you can see there are two core sets of plugins:
 
@@ -107,7 +107,7 @@ After saving these changes, the `button` element settings will have `padding` an
 
 <!-- vale on -->
 
-Hurray!! 🥳
+Hurray!
 
 The `padding` and `width` settings are now available to the `button` element. And, we're done here...
 
@@ -182,7 +182,7 @@ a new button dropped into the page doesn't look good with the default settings a
 
 <!-- vale on -->
 
-We can easily fix this by adding the default values for both `padding` and `width` properties.
+We can fix this by adding the default values for both `padding` and `width` properties.
 
 For this, we pass the `create` argument to the plugin factory.
 It is a function that gets the default value as the argument and returns the data for that element.
@@ -233,7 +233,7 @@ button({
 The `create` function defines the initial value for element `settings` and `data` property which can hold any data you might need.
 :::
 
-Now if you drop a new `button` element to the editor it will look much better as show below:
+Now if you drop a new `button` element to the editor it will look much better as shown below:
 
 <!-- vale off -->
 
@@ -249,7 +249,7 @@ This is because now the `padding` and `width` settings have a default value for 
 
 :::note
 Here we've used the `create` function for setting the default value for `padding` and `width` properties.
-However, using similar principle you can do whatever logic you need.
+However, using a similar principle you can do whatever logic you need.
 :::
 
 ## Conclusion
